--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <form id="register-form">
             <div class="full-box">
                 <label for="email">E-mail</label>
-                <input type="email" name="email" id="email" placeholder="Digite o seu e-mail" data-min-length="3">
+                <input type="email" name="email" id="email" placeholder="Digite o seu e-mail" data-min-length="3" data-required data-email-validate>
             </div>
             <div class="half-box" spacing>
                 <label for="name">Nome</label>
-                <input type="text" name="name" id="name" placeholder="Digite o seu nome">
+                <input type="text" name="name" id="name" placeholder="Digite o seu nome" data-max-length="16" data-only-letters>
             </div>
             <div class="half-box">
                 <label for="lastname">Sobrenome</label>
@@ -26,11 +26,11 @@
             </div>
             <div class="half-box" spacing>
                 <label for="password">Senha</label>
-                <input type="password" name="password" id="password" placeholder="Digite a sua senha">
+                <input type="password" name="password" id="password" placeholder="Digite a sua senha" data-required data-password-validate>
             </div>
             <div class="half-box">
-                <label for="passconfimation">Confirme</label>
-                <input type="passconfimation" name="passconfimation" id="passconfimation" placeholder="Confirme a sua senha">
+                <label for="passconfimation">Confirme a senha</label>
+                <input type="password" name="passconfimation" id="passconfimation" placeholder="Confirme a sua senha" data-equal="password" data-required>
             </div>
             <div class="full-box">
                 <input type="checkbox" name="agreement" id="agreement">
